CDR-105: added schemas and made schema test non-network dependent